--- a/txtfile-style.css
+++ b/txtfile-style.css
@@ -19,12 +19,12 @@ p{
     text-align: justify;
 }
 
-a{
+ a{
     text-decoration: none;
     color: rgb(63, 125, 110);
 }
 
-a:hover{
+.cookie-txt a:hover{
     text-decoration: underline;
 }
 
